# scan_ports

./: .gitignore  README.md  pyproject.toml
src/: main.py  scanner.py  validations.py
