[tool.poetry]
name = "scan-ports"
version = "0.1.0"
description = ""
authors = ["Alexander Alarcon <walarcon14@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.9.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scan-ports = "src.main:main"
